--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,7 +1,3 @@
-html {
-    width: 100%;
-    margin: 0 auto;
-}
 
 h1 {
     text-align: center;
@@ -59,10 +55,22 @@ h4 {
     margin-left: 4em;
 }
 
+.text-container {
+    max-width: 50em;
+    margin: 0 auto;
+    margin-top: 8em;
+    margin-bottom: 7.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .content-text {
     font-family: montagu-slab;
     font-size: 1.25em;
 }
+
 
 @media only screen and (max-width: 1440px) {
 
@@ -94,27 +102,31 @@ h4 {
         width: 50em;
     }
 
+    h1 {
+        margin-top: 1.5em;
+    }
+
 }
 
 @media only screen and (max-width: 425px) {
-    
-    html{
-        width: 100%;
-    }
-
-    .section-container {
-    width: 90%;
-    border: none;
-    margin: 2em auto;
-    }
 
     .content-text {
         width: 90%;
         font-size: 2em;
     }
 
+    .section-container {
+        width: 90%;
+    }
+
+
     h1 {
         font-size: 3em;
+        margin-top: 1.25em;
+    }
+
+    .hector img {
+        width: 50%;
     }
 
 }
@@ -130,9 +142,14 @@ h4 {
     }
 
     .section-container {
-        margin: 0.75 auto;
+        margin: 0.5 auto;
         font-size: 120%;
     }
+
+    .section-container p {
+        margin: 0.25em;
+    }
+
 }
 
 @media only screen and (max-width: 320px) {
